--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,46 @@
     <!-- Languages -->
     <string name="english">English</string>
     <string name="polish">Polski</string>
+    
+    <!-- Photo Editor Screen -->
+    <string name="editing">Editing</string>
+    <string name="save">Save</string>
+    <string name="back">Back</string>
+    <string name="tap_tool_hint">Tap tool below to start editing</string>
+    
+    <!-- Editor Tools -->
+    <string name="crop_rotate">Crop &amp; Rotate</string>
+    <string name="adjust">Adjust</string>
+    <string name="ai_tools">AI Tools</string>
+    <string name="ai_effects">AI Effects</string>
+    <string name="text_tool">Text</string>
+    <string name="draw_tool">Draw</string>
+    
+    <!-- Crop & Rotate Tools -->
+    <string name="crop">Crop</string>
+    <string name="rotate">Rotate</string>
+    <string name="flip">Flip</string>
+    <string name="stretch">Stretch</string>
+    
+    <!-- Adjust Tools -->
+    <string name="brightness">Brightness</string>
+    <string name="contrast">Contrast</string>
+    <string name="saturation">Saturation</string>
+    <string name="sharpness">Sharpness</string>
+    <string name="temperature">Temperature</string>
+    <string name="tint">Tint</string>
+    
+    <!-- AI Tools -->
+    <string name="remove_background">Remove Background</string>
+    <string name="replace_background">Replace Background</string>
+    <string name="enhance_resolution">Enhance Resolution</string>
+    <string name="denoise">Denoise</string>
+    <string name="retouch_face">Retouch Face</string>
+    
+    <!-- AI Effects -->
+    <string name="cartoonize">Cartoonize</string>
+    <string name="sketch">Sketch</string>
+    <string name="oil_painting">Oil Painting</string>
+    <string name="portrait_style">Portrait Style</string>
+    <string name="color_boost">Color Boost</string>
 </resources>
