--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -96,6 +96,15 @@
     <string name="flip_horizontal">Odbij poziomo</string>
     <string name="flip_vertical">Odbij pionowo</string>
     
+    <!-- Text Tool -->
+    <string name="text_input">Wprowadź tekst</string>
+    <string name="text_size">Rozmiar tekstu</string>
+    <string name="text_color">Kolor</string>
+    <string name="alignment">Wyrównanie</string>
+    <string name="font_weight">Grubość</string>
+    <string name="stroke">Obramowanie</string>
+    <string name="background">Tło</string>
+    
     <!-- Common Actions -->
     <string name="reset">Resetuj</string>
     <string name="apply">Zastosuj</string>
