--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -100,14 +100,24 @@
     <string name="text_input">Wprowadź tekst</string>
     <string name="text_size">Rozmiar tekstu</string>
     <string name="text_color">Kolor</string>
+    <string name="text_opacity">Przezroczystość</string>
     <string name="alignment">Wyrównanie</string>
     <string name="font_weight">Grubość</string>
     <string name="stroke">Obramowanie</string>
     <string name="background">Tło</string>
+    <string name="shadow">Cień</string>
+    <string name="edit_text">Edytuj tekst</string>
+    
+    <!-- Draw Tool -->
+    <string name="draw_color">Kolor</string>
+    <string name="draw_size">Rozmiar pędzla</string>
+    <string name="draw_opacity">Przezroczystość</string>
+    <string name="erase">Wymaż</string>
     
     <!-- Common Actions -->
     <string name="reset">Resetuj</string>
     <string name="apply">Zastosuj</string>
     <string name="done">Gotowe</string>
 </resources>
+
 
