--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,11 @@
     <string name="denoise">Denoise</string>
     <string name="retouch_face">Retouch Face</string>
     
+    <string name="portrait_ai">Portrait AI</string>
+    <string name="beauty_mode">Beauty Mode</string>
+    <string name="eye_enhancement">Eye Enhancement</string>
+    <string name="face_blur">Face Blur</string>
+    
     <string name="cartoonize">Cartoonize</string>
     <string name="sketch">Sketch</string>
     <string name="oil_painting">Oil Painting</string>
