--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,8 +44,9 @@
     <string name="adjust">Adjust</string>
     <string name="filters">Filters</string>
     <string name="stickers">Stickers</string>
-    <string name="ai_tools">AI Tools</string>
+    <string name="portrait">Portrait</string>
     <string name="ai_styles">AI Styles</string>
+    <string name="ai_background">AI Background</string>
     <string name="text_tool">Text</string>
     <string name="draw_tool">Draw</string>
     
